--- a/styles/password.css
+++ b/styles/password.css
@@ -1,7 +1,7 @@
 .Password__container {
-  display: grid;
-  grid-template-columns: 1fr auto;
+  display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .Password__value {
@@ -22,11 +22,11 @@
 
 .Copied__text {
   color: var(--color-green-200);
-  display: none;
+  visibility: hidden;
   text-transform: uppercase;
 }
 
-.Copied__button {
+.Copy__button {
   display: inline-flex;
   border: none;
   align-items: center;
@@ -34,7 +34,7 @@
   outline: none;
 }
 
-.Copied__iconWrapper {
+.Copy__iconWrapper {
   display: inline-flex;
   width: 18px;
   height: 20px;
@@ -42,20 +42,27 @@
   justify-content: center;
 }
 
-.Copied__iconWrapper svg {
+.Copy__iconWrapper svg {
   width: inherit;
   height: inherit;
   fill: var(--color-green-200);
 }
 
-.Copied__button:hover .Copied__iconWrapper svg,
-.Copied__button:focus .Copied__iconWrapper svg,
-.Copied__button:active .Copied__iconWrapper svg {
+.Copy__button:hover .Copy__iconWrapper svg {
   fill: var(--color-white);
 }
 
+.Copy__button:focus .Copy__iconWrapper svg,
+.Copy__button:active .Copy__iconWrapper svg {
+  fill: var(--color-green-200);
+}
+
 @media (min-width: 600px) {
-  .Copied__iconWrapper {
+  .Password__value {
+    font: var(--fontPreset1);
+  }
+
+  .Copy__iconWrapper {
     width: 21px;
     height: 24px;
   }
